[gd_scene load_steps=4 format=3 uid="uid://d0hm8gekw5s35"]

[ext_resource type="Script" path="res://addons/DVs_behavior_tree/behavior_tree/composites/sequence.gd" id="1_p0xkv"]
[ext_resource type="Script" path="res://scenes/objects/boss/behavior/crazy_shot.gd" id="2_1efiy"]
[ext_resource type="Script" path="res://addons/DVs_behavior_tree/behavior_tree/leaves/wait_for_time.gd" id="3_26mq5"]

[node name="SeqCrazyShot" type="Node"]
script = ExtResource("1_p0xkv")

[node name="CrazyShot" type="Node" parent="."]
script = ExtResource("2_1efiy")

[node name="AttackTime" type="Timer" parent="CrazyShot"]
wait_time = 4.0
one_shot = true

[node name="TimeBetweenShots" type="Timer" parent="CrazyShot"]
wait_time = 0.12

[node name="BTWaitForTime" type="Node" parent="."]
script = ExtResource("3_26mq5")
min = 2.0
max = 2.0

[connection signal="timeout" from="CrazyShot/TimeBetweenShots" to="CrazyShot" method="_on_time_between_shots_timeout"]
